--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ install:
   - pip install wtforms
   - pip install coveralls
 script:
-  - python unit_tests.py
+  - coverage run --source= unit_tests.py test
+  #- python unit_tests.py
 after_success: coveralls
