--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install wtforms
   - pip install coveralls
 script:
-  - coverage run --source= unit_tests.py
+  - coverage run --source=myapp unit_tests.py
   #- python unit_tests.py
 after_success: coveralls
